# SolEscrow

./: .gitignore  .tool-versions  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/demo/: route.ts
app/src/idl/: escrow.json
app/src/lib/: demo-flow.ts  pda.ts
client/: cli.ts  escrow-client.ts  pda.ts
programs/escrow/: Cargo.toml
programs/escrow/src/: error.rs  events.rs  helpers.rs  lib.rs  state.rs
programs/escrow/src/instructions/: approve_milestone.rs  cancel_escrow.rs  claim_expired.rs  close_escrow.rs  create_escrow.rs  initialize_config.rs  initiate_dispute.rs  mint_receipt.rs  mod.rs  release_milestone.rs  resolve_dispute.rs  revoke_receipt.rs  sync_beneficiary.rs  transfer_claim.rs  update_config.rs
scripts/: devnet-demo.ts
tests/: escrow-bankrun.ts  escrow.ts
