[package]
name = "escrow"
version = "0.1.0"
description = "On-chain escrow engine with milestone-based payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token", "associated_token", "metadata"] }

# Pin to avoid edition2024 requirement (platform-tools v1.51 = Rust 1.84)
blake3 = ">=1.3, <1.8"
constant_time_eq = ">=0.2, <0.4"
